# eigen-dataframe

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: basic_usage.cpp.ED25DA0997046B8C.idx  dataframe.hpp.F30C8CC3BA155BED.idx
examples/: CMakeLists.txt  basic_usage.cpp
include/dataframe/: dataframe.hpp
include/file/: matrix_io.cpp
tests/: CMakeLists.txt
tests/file/: test_readmat.cpp
tests/file/data/: make_test_data.py  read_mat_test.npy
